Aligned hourly blocks (on the left for larger screens) to fix an issue where they suddenly appeared too big.

--- a/src/app/components/hourly-forecast/hourly-forecast.component.css
+++ b/src/app/components/hourly-forecast/hourly-forecast.component.css
@@ -8,6 +8,7 @@
     border-radius: 8px;
     padding: 5px;
     margin-top: 5px;
+    width: 221px;
 }
 
 .time {
